# rpg_public_dronet

./: .gitignore  README.md  cnn.py  cnn_models.py  common_flags.py  conda_env.yml  constants.py  evaluation.py  evaluation_gate.py  img_utils.py  log_utils.py  logz.py  plot_loss.py  plot_results.py  prediction.py  testing.py  topn_accuracy.sh  training_results.sh  training_results_mobilenetv2.sh  utils.py
best_model/: best_weights.h5  model_struct.json
configs/: outdoor.yaml
data_preprocessing/: time_stamp_matching.py
drone_control/dronet/: README.md
drone_control/dronet/dronet_control/: CMakeLists.txt  package.xml
drone_control/dronet/dronet_control/include/dronet_control/: deep_navigation.h
drone_control/dronet/dronet_control/launch/: deep_navigation.launch
drone_control/dronet/dronet_control/src/: deep_navigation.cpp
drone_control/dronet/dronet_perception/: CMakeLists.txt  README.md  package.xml  setup.py
drone_control/dronet/dronet_perception/launch/: bebop_launch.launch  dronet_launch.launch
drone_control/dronet/dronet_perception/models/: model_struct.json  model_weights_59.h5
drone_control/dronet/dronet_perception/msg/: CNN_out.msg
drone_control/dronet/dronet_perception/nodes/: dronet_node.py
drone_control/dronet/dronet_perception/src/Dronet/: Dronet.py  utils.py
model/: model_struct.json
