<?xml version="1.0"?>
<package format="2">
  <name>dronet_perception</name>
  <version>0.0.1</version>
  <description>The dronet package, for deep learning navigation</description>

  <maintainer email="loquercio@ifi.uzh.ch">tony</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  

  <export>

  </export>
</package>
